Move buttons to left on event details, 100% on mobile. Twitter back to link. Fixes #56

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -143,6 +143,17 @@
   }
 }
 
+.event-actions {
+  padding-left: 0 !important;
+
+  .button {
+    display: block;
+    padding: .5em 0;
+    width: 100%;
+    font-size: 1.4em;
+  }
+}
+
 .event-details {
 
   h2 {
@@ -152,8 +163,6 @@
   .roster {
     h3 {
       margin: 0;
-    }
-    .grid-container {
       border-bottom: 1px solid #d0d0d0;
     }
     ul {
@@ -200,6 +209,14 @@ ul.players {
 @media (max-width: 60em) {
   .events {
     font-size: 60%;
+
+    .event-actions {
+      padding: 2em 0;
+
+      .button {
+        font-size: 2.2em;
+      }
+    }
 
     .host a {
       width: 30px;
